argocd/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ramesh10654/thetymbackend:v1.3
      imagePullSecrets:
      - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31000  # Choose a nodePort within the allowed range
  selector:
    app: backend
