argocd/frontend.yml
# Modified Deployment YAML with namespace
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: thetym   # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: docker.io/ramesh10654/myapp:v1.3
        ports:
        - containerPort: 80
---
# Modified Service YAML with namespace
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: thetym   # Specify the namespace here
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000   # You can specify a nodePort here or let Kubernetes assign one automatically
  selector:
    app: frontend
