argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: thetym
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dev.thetym.com  # Replace with your domain or hostname
    secretName: tls-secret  # Name of the TLS secret containing the certificate and key
  rules:
  - host: dev.thetym.com  # Replace with your domain or hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
